--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"test": "jest --no-watchman",
-		"server": "nodemon index.js",
+		"test": "cross-env NODE_ENV=test jest --no-watchman",
+		"server": "cross-env Node_ENV=development nodemon index.js",
 		"start": "node index.js"
 	},
 	"devDependencies": {
@@ -18,7 +18,7 @@
 		"knex": "^0.21.6",
 		"sqlite3": "^5.0.0"
 	},
-	"jest" : {
-		"testEnvironment":"node"
+	"jest": {
+		"testEnvironment": "node"
 	}
 }
