--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"private": true,
 	"scripts": {
-		"test": "cross-env NODE_ENV=test jest --no-watchman",
-		"server": "cross-env Node_ENV=development nodemon index.js",
+		"test": "cross-env NODE_ENV=testing jest --no-watchman",
+		"server": "cross-env NODE_ENV=development nodemon index.js",
 		"start": "node index.js"
 	},
 	"devDependencies": {
